--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.11.8",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-netlify": "next",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "bootstrap": "^5.3.2",
+    "sass": "^1.69.5",
     "svelte": "^4.2.7",
     "vite": "^5.0.3"
   },
