--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "devDependencies": {
     "@popperjs/core": "^2.11.8",
     "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/adapter-netlify": "next",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "bootstrap": "^5.3.2",
@@ -18,5 +17,8 @@
     "svelte": "^4.2.7",
     "vite": "^5.0.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@sveltejs/adapter-netlify": "^4.1.0"
+  }
 }
